Fix not stretching sides

--- a/style.css
+++ b/style.css
@@ -113,9 +113,14 @@ a {
     flex-direction: column;
     align-items: center;
     background-color: white;
+}
+
+.two {
+    padding-bottom: 125px;
     width: 1000px;
-    padding: 0px 200px;
-    padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .images {
@@ -159,13 +164,18 @@ a {
 
 .third {
     background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+.three {
+    padding-top: 100px;
+    padding-bottom: 125px;
     width: 1000px;
-    padding: 0px 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 100px;
-    padding-bottom: 70px; 
 }
 
 .quote {
@@ -191,7 +201,6 @@ a {
 
 .fourth {
     background-color: white;
-    width: 1000px;
     padding: 100px 200px;
     display: flex;
     justify-content: center;
@@ -242,7 +251,6 @@ a {
 .footer {
   background-color: #1F2937;
   color: #E5E7EB;
-  width: 1400px;
   padding: 20px 0px;
   display: flex;
   justify-content: center;
